--- a/about.css
+++ b/about.css
@@ -250,6 +250,134 @@ nav .container {
   color: white !important;
 }
 
+
+
+.hero{
+  background-color:#f8f8f8 ;
+  overflow: hidden;
+}
+
+.heading h1{
+ color: green;
+ font-size: 40px;
+ text-align: center;
+ margin-top: 35px;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  margin: 65px auto;
+}
+
+.hero-content{
+  flex:1;
+  width: 600px;
+  margin:0px 25px;
+  animation:fadeInUp 2s ease ;
+}
+.hero-content h2{
+   font-size:38px ;
+   margin-bottom: 20px;
+   color:#333 ;
+}
+
+.hero-content p{
+  font-size: 18px;
+  line-height:1.5 ;
+  margin-bottom:40px ;
+  color: #666;
+}
+.hero-content button{
+   display: inline-block;
+   background-color:green ;
+   color: #fff;
+   padding: 12px 24px;
+   border-radius:5px ;
+   font-size:20px ;
+   border: none;
+   cursor: pointer;
+   transition:0.3s ease ;
+}
+.hero-content button:hover{
+ background-color: green;
+ transform: scale(1.1);
+}
+.hero-image{
+  flex: 1;
+  width:600px;
+  margin: auto;
+  animation:fadeInRight 2s ease ;
+}
+
+img{
+   width: 100%;
+   height: auto;
+   border-radius:10px ;
+}
+
+@media screen and (max-width: 768px){
+  .heading h1{
+    font-size: 45px;
+    margin-top: 30px;
+  }
+  .hero{
+    margin: 0px;
+  }
+  .container{
+    width: 100%;
+    flex-direction:column ;
+    margin: 0px;
+    padding: 0px 40px;
+  }
+  .hero-content{
+    width: 100%;
+    margin: 35px 0px;
+  }
+  .hero-content h2{
+    font-size:30px ;
+  }
+  .hero-content p{
+    font-size:18px ;
+    margin-bottom: 20px;
+  }
+  .hero-content button{
+    font-size: 16px;
+    padding:8px 16px;
+  }
+  .hero-image{
+    width:100% ;
+  }
+}
+@keyframes fadeInUp {
+  0%{
+    opacity: 0;
+    transform:translateY(50px);
+  }
+  100%{
+    opacity: 1;
+    transform:translateY(0px);
+  }
+}
+@keyframes fadeInRight {
+  0%{
+    opacity: 0;
+    transform:translateX(-50px);
+  }
+  100%{
+    opacity: 1;
+    transform:translateX(0px);
+  }
+}
+
+
+
+
+
+
+
 /* =====
 SHOWCASE
 ===== */
@@ -258,7 +386,7 @@ SHOWCASE
   position: relative;
   color: white;
   height: 100vh;
-  background: url(../images/background.jpg) center center/cover;
+ 
 }
 
 .showcase::before {
@@ -343,281 +471,99 @@ section ul li {
 FOOTER
 === */
 
-footer {
-  background-color: var(--dark-color);
-  color: white;
-  height: 100%;
-  padding: 2rem 0rem;
-  margin-top: 1rem;
+
+
+
+
+footer{
+  background-color: #111;
 }
 
-.footer {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1.5rem;
-}
-
-.footer h4 {
-  margin-bottom: 1rem;
-}
-
-.footer p {
-  font-size: 0.95rem;
-  text-align: left;
-}
-
-.footer .logo {
-  margin: 0rem;
-  margin-bottom: 1rem;
-}
-
-.footer article:nth-child(3) p {
-  border-bottom: 1px dotted rgb(82, 82, 82);
-}
-
-.footer input {
+.footerContainer{
   width: 100%;
-  padding: 0.5rem;
-  margin: 5px 0px;
+  padding: 70px 30px 20px;
 }
 
-.footer article:nth-child(2) a {
-  display: block;
-  text-decoration: none;
-  color: white;
-  text-align: center;
-  padding: 0.5rem;
-  background-color: var(--primary-color);
-}
-
-.footer article:last-child a {
-  display: inline-block;
-  text-decoration: none;
-  color: white;
-  text-align: center;
-  padding: 0.6rem 0.8rem;
-  background-color: green;
-  margin-top: 0.7rem;
-}
-
-.footer a:hover {
-  background-color: var(--light-grey-color) !important;
-  color: black !important;
-}
-
-.copyright {
-  padding: 0.5rem;
-  background-color: rgb(75, 75, 75);
-  text-align: center;
-  margin-top: 2rem;
-  font-size: 0.8rem;
-}
-
-/* == 
-ABOUT
-== */
-
-.about {
-  display: grid;
-  grid-template-columns: 2.5fr 1fr;
-  grid-gap: 1.5rem;
-  margin: 1.7rem 0rem;
-}
-
-.about article {
-  background-color: white;
-  padding: 1rem;
-}
-
-.about article:first-child {
-  grid-row: 1 / span 3;
-}
-
-.about article:first-child h2 {
-  padding: 0.7rem 0rem;
-  font-size: 1.7rem;
-  font-weight: 900;
-}
-
-.about article:last-child {
-  color: white;
-  background-color: var(--primary-color);
-}
-
-.about article:last-child h3 {
-  padding: 0.7rem 0rem;
-}
-
-.about article:last-child a {
-  text-decoration: none;
-  display: inline-block;
-  width: 100%;
-  color: white;
-  background-color: var(--dark-color);
-  text-align: center;
-  padding: 0.5rem 0rem;
-  margin-top: 0.7rem;
-}
-
-/* =========
-ARTICLE PAGE
-==========*/
-
-.article-page {
-  display: grid;
-  grid-template-columns: 2.5fr 1fr;
-  grid-gap: 1.5rem;
-  margin: 1.7rem 0rem;
-}
-
-.article-page article {
-  background-color: white;
-  padding: 1rem;
-}
-
-.article-page > *:first-child {
-  grid-row: 1 / span 3;
-}
-
-.article-page > *:first-child > *:nth-child(3) {
-  background-color: var(--light-grey-color);
-  padding: 0.4rem 1rem;
-  margin: 0.7rem 0rem;
+.socialIcons{
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
-.article-page > *:first-child > *:nth-child(3) i {
-  margin-right: 0.5rem;
+.socialIcons a{
+text-decoration: none;
+padding: 10px;
+background-color: white;
+margin: 10px;
+border-radius: 50%;
 }
 
-.article-page article:last-child {
+.socialIcons a i{
+  font-size: 2em;
+  color: black;
+  opacity: 0.9;
+}
+
+.socialIcons a:hover{
+  background-color: #111;
+  transition: 0.5s;
+}
+
+.socialIcons a:hover i{
   color: white;
-  background-color: orange;
+  transition: 0.5s;
 }
 
-.article-page article:last-child h3 {
-  padding: 0.7rem 0rem;
+.footerNav{
+  margin: 30px 0;
+ 
 }
 
-.article-page article:last-child a {
-  text-decoration: none;
-  display: inline-block;
-  width: 100%;
-  color: white;
-  background-color: var(--dark-color);
+.footerNav ul{
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+ 
+}
+
+.footerNav ul li a{
+color: white;
+margin: 20px;
+text-decoration: none;
+font-size: 1.3em;
+opacity: 0.7;
+transition: 0.5s;
+
+}
+
+.footerNav ul li a:hover{
+  opacity: 1;
+}
+
+.footerBottom{
+  background-color: #000;
+  padding: 20px;
   text-align: center;
-  padding: 0.5rem 0rem;
-  margin-top: 0.7rem;
 }
 
-.article-page ul {
-  list-style-position: inside;
-  list-style-type: "-    ";
+.footerBottom p{
+  color: white;
 }
 
-.article-page ul li {
-  padding: 0.5rem 0rem;
-  border-bottom: 1px dotted black;
+.designer{
+  opacity: 0.7;
+  text-transform:uppercase ;
+  letter-spacing: 1px;
+  font-weight: 400;
+  margin: 0px 5px;
 }
 
-/* =======
-FOR TABLET
-======= */
-
-@media (max-width: 900px) {
-  /*=====
-    NAV BAR 
-    =====*/
-  nav .container {
-    flex-direction: column;
+@media (max-width:700px) {
+  .footerNav ul{
+      flex-direction: column;
   }
-
-  
-
-  .options a {
-    margin: 0.5rem 0rem;
-  }
-
-  /* =====
-    SHOWCASE
-    ===== */
-  .showcase .container {
-    grid-template-columns: 1fr;
-  }
-
-  /* =====
-    ARTICLES
-    ===== */
-  .articles {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .articles > a:nth-child(1),
-  .articles > a:last-child {
-    display: block;
-    grid-column: 1 / span 1;
-  }
-
-  .articles > a:last-child {
-    grid-column: 1 / span 1;
-  }
-}
-
-/* =======
-FOR MOBILE
-======= */
-
-@media (max-width: 700px) {
-  /* =====
-    SHOWCASE
-    ===== */
-  .showcase {
-    height: 80vh;
-    text-align: center;
-  }
-
-  .showcase .text-content p:nth-child(3) {
-    text-align: center;
-  }
-
-  /* =====
-    ARTICLES
-    ===== */
-  .articles {
-    grid-template-columns: 1fr;
-  }
-
-  /* ===
-    FOOTER
-    === */
-  .footer {
-    grid-template-columns: 1fr;
-  }
-
-  .footer article {
-    margin-top: 0.5rem;
-  }
-
-  /* == 
-    ABOUT
-    == */
-  .about {
-    grid-template-columns: 1fr;
-    text-align: justify;
-  }
-
-  /* =========
-    ARTICLE PAGE
-    ==========*/
-  .article-page {
-    grid-template-columns: 1fr;
-    text-align: justify;
-  }
-
-  .article-page > *:first-child > *:nth-child(3) {
-    flex-direction: column;
+  .footerNav ul li{
+      width: 100%;
+      text-align: center;
+      margin: 10px;
   }
 }
