--- a/home.css
+++ b/home.css
@@ -590,58 +590,100 @@ FOR TABLET
   }
 }
 
-/* =======
-FOR MOBILE
-======= */
 
-@media (max-width: 700px) {
-  /* =====
-    SHOWCASE
-    ===== */
-  .showcase {
-    height: 80vh;
-    text-align: center;
+
+/* footer */
+
+
+footer{
+  background-color: #111;
+}
+
+.footerContainer{
+  width: 100%;
+  padding: 70px 30px 20px;
+}
+
+.socialIcons{
+  display: flex;
+  justify-content: center;
+}
+
+.socialIcons a{
+text-decoration: none;
+padding: 10px;
+background-color: white;
+margin: 10px;
+border-radius: 50%;
+}
+
+.socialIcons a i{
+  font-size: 2em;
+  color: black;
+  opacity: 0.9;
+}
+
+.socialIcons a:hover{
+  background-color: #111;
+  transition: 0.5s;
+}
+
+.socialIcons a:hover i{
+  color: white;
+  transition: 0.5s;
+}
+
+.footerNav{
+  margin: 30px 0;
+ 
+}
+
+.footerNav ul{
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+ 
+}
+
+.footerNav ul li a{
+color: white;
+margin: 20px;
+text-decoration: none;
+font-size: 1.3em;
+opacity: 0.7;
+transition: 0.5s;
+
+}
+
+.footerNav ul li a:hover{
+  opacity: 1;
+}
+
+.footerBottom{
+  background-color: #000;
+  padding: 20px;
+  text-align: center;
+}
+
+.footerBottom p{
+  color: white;
+}
+
+.designer{
+  opacity: 0.7;
+  text-transform:uppercase ;
+  letter-spacing: 1px;
+  font-weight: 400;
+  margin: 0px 5px;
+}
+
+@media (max-width:700px) {
+  .footerNav ul{
+      flex-direction: column;
   }
-
-  .showcase .text-content p:nth-child(3) {
-    text-align: center;
-  }
-
-  /* =====
-    ARTICLES
-    ===== */
-  .articles {
-    grid-template-columns: 1fr;
-  }
-
-  /* ===
-    FOOTER
-    === */
-  .footer {
-    grid-template-columns: 1fr;
-  }
-
-  .footer article {
-    margin-top: 0.5rem;
-  }
-
-  /* == 
-    ABOUT
-    == */
-  .about {
-    grid-template-columns: 1fr;
-    text-align: justify;
-  }
-
-  /* =========
-    ARTICLE PAGE
-    ==========*/
-  .article-page {
-    grid-template-columns: 1fr;
-    text-align: justify;
-  }
-
-  .article-page > *:first-child > *:nth-child(3) {
-    flex-direction: column;
+  .footerNav ul li{
+      width: 100%;
+      text-align: center;
+      margin: 10px;
   }
 }
